fix hp logo date spacing and sizes

--- a/assets/static/_css/indypy/home.css
+++ b/assets/static/_css/indypy/home.css
@@ -29,7 +29,7 @@ body.home #intro .overlay {
 }
 body.home #intro .main .logo {
     width: 80vw;
-    height: 80vh;
+    height: 40vh;
     margin: 0 auto;
 }
 @media (min-width: 750px) {
@@ -227,7 +227,7 @@ section#intro {
 }
 
 body.home #intro .dates {
-    font-size: 4vw;
+    font-size: 1.2em;
     font-weight: 900;
     text-align: center;
 }
